Crash when making linked Mesh with UV Map local #32829

Closed
opened 2012-10-09 17:09:47 +02:00 by Jon Apgar · 6 comments

Relates to: #29459

%%%1. Open default blender file.
2. Add UV Map to default cube Mesh.
3. Save .blend.
4. Open new file.
5. Link to cube's Object data in your .blend
6. Make Object data local (either by clicking Make Local button in Object properties or hitting L)

  1. Clicking Make Local button in Mesh properties crashes Blender.
  • Note that this does not cause the crash if the Mesh does not have any UV Maps.
  • This crash also occurs if you Link to the Mesh in the .blend file and then try to Make Local.
  • There is a workaround:
  1. Link to the Object in the .blend file.
  2. Create a new Object and change the Mesh to the linked data that came in with the Object.
  3. Clicking Make Local button does not crash Blender.

Note that this only seems to happen to Meshes with a UV Map.

%%%

**Relates to**: #29459 %%%1. Open default blender file. 2. Add UV Map to default cube Mesh. 3. Save .blend. 4. Open new file. 5. Link to cube's Object data in your .blend 6. Make Object data local (either by clicking Make Local button in Object properties or hitting L) 7. Clicking Make Local button in Mesh properties crashes Blender. - Note that this does not cause the crash if the Mesh does not have any UV Maps. - This crash also occurs if you Link to the Mesh in the .blend file and then try to Make Local. - There is a workaround: 1. Link to the Object in the .blend file. 2. Create a new Object and change the Mesh to the linked data that came in with the Object. 3. Clicking Make Local button does not crash Blender. Note that this only seems to happen to Meshes with a UV Map. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Sorry I forgot to add my version. This occurred in Version 2.6.3 and is still occurring as of 2.6.4 r51026%%%

%%%Sorry I forgot to add my version. This occurred in Version 2.6.3 and is still occurring as of 2.6.4 r51026%%%

%%%Does not happen here on Linux 64bit. Which operation system you're using?%%%

%%%Does not happen here on Linux 64bit. Which operation system you're using?%%%
Author

%%%Windows 7 64 bit.

I noticed this happens in both x86 and 64bit versions of Blender on my machine. Also tested on another machine here, same operating system (Windows 7 64bit).%%%

%%%Windows 7 64 bit. I noticed this happens in both x86 and 64bit versions of Blender on my machine. Also tested on another machine here, same operating system (Windows 7 64bit).%%%

%%%fixed, 51270. strange this went by so long with nobody noticing it.%%%

%%%fixed, 51270. strange this went by so long with nobody noticing it.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32829
No description provided.