fix [#32829] Crash when making linked Mesh with UV Map local